...
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_vertical_padding"
        android:overScrollMode="never"
        android:fillViewport="true"
        android:id="@+id/submitScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
...
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/submit_dialog_hint_name"
                android:inputType="textCapWords|textPersonName"
                android:maxLength="@integer/submit_dialog_max_length_name"
                android:id="@+id/submitNameEditText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_vertical_padding"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/submit_dialog_hint_location"
                android:inputType="textCapWords|textPostalAddress"
                android:maxLength="@integer/submit_dialog_max_length_location"
                android:id="@+id/submitLocationEditText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_vertical_padding"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/submit_dialog_hint_title"
                android:inputType="textCapSentences"
                android:maxLength="@integer/submit_dialog_max_length_title"
                android:id="@+id/submitTitleEditText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_vertical_padding"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/submit_dialog_hint_story"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="@integer/submit_dialog_max_length_story"
                android:id="@+id/submitStoryEditText" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_vertical_padding"
                android:layout_gravity="center_horizontal"
...
