...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:id="@+id/mainToolbar"/>

    <com.jparkie.givesmehope.views.widgets.SlidingTabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:id="@+id/mainSlidingTabs"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:id="@+id/mainViewPager"/>

</LinearLayout>
